# Dimensional-Rift-Fighters-DRF-

./: .gitignore  BUILD_INSTRUCTIONS.md  CLAUDE.md  CLAUDE_CODE_SETUP.md  CMakeLists.txt  DFR_PROJECT_SUMMARY.md  IMPORTANT_READ_THIS.md  INTEGRATION_SUMMARY.md  ROU_COMPLETE_PACKAGE.md  ROU_IMPLEMENTATION_SUMMARY.md  ROU_QUICK_REFERENCE.txt  SETUP_COMPLETE.md  SIMPLE_FIX_STEPS.md  build-debug.bat  build.bat  claude-config.json  diagnose-claude.ps1  launch-claude-FORCE.ps1  launch-claude-new.ps1  memory-graph.json  reinstall-claude-fixed.ps1  reinstall-claude.ps1  run.bat  save_rou_implementation.bat  setup.bat  setup.ps1
.claude/: settings.local.json  settings.local.json.backup
.claude/commands/: balance-check.md  generate-character.md  implement-combat.md
PRPs/characters/: character-template.h
PRPs/combat/: balance-config.json
PRPs/network/: packet-structure.md
docs/: GameApplicationIntegration.md  GameDesignDocument.md  RenderingSystemIntegration.md  ShopSystemIntegration.md  UISystemIntegration.md  integration-guide.md  system-comparison.md
docs/characters/: hyukwoonsung-guide.md  yuito-complete-spec.md
examples/: CorrectSkillImplementation.cpp  SpecialMoveExample.cpp
examples/LSFDC/combat/: damage-formula.cpp
game-project/: CMakeLists.txt  setup-mcp-environment.bat  setup-mcp-environment.ps1  setup-mcp-environment.sh
game-project/MCP-Servers/: balance-validator-config.json  character-assets-config.json  combat-system-config.json  data-persistence-config.json  environment-generator-config.json
game-project/src/: main.cpp  test_rou_main.cpp
mcp-servers/: README.md  dfr-server.js  package-lock.json  package.json
src/: CMakeLists.txt
src/AI/: AIController.cpp  AIController.h
src/Animation/: AnimationBlender.cpp  AnimationBlender.h  AnimationClip.cpp  AnimationClip.h  AnimationController.cpp  AnimationController.h  CharacterAnimator.cpp  CharacterAnimator.h  SkeletonData.cpp  SkeletonData.h
src/Application/: GameApplication.cpp  GameApplication.h  GameApplicationAdapter.cpp  GameApplicationAdapter.h  GameApplicationAdapter2.cpp  WinMain.cpp  main.cpp
src/Characters/: CharacterBase.cpp  CharacterBase.h  CharacterCategory.cpp  CharacterCategory.h  CharacterFactory.cpp  CharacterFactory.h  CharacterSystemTest.cpp  SkillValidation.h
src/Characters/Animal/: MissBatCrimsonAuthority.cpp  MissBatCrimsonAuthority.h
src/Characters/Cultivation/: Seraphina.cpp  Seraphina.h
src/Characters/GodsHeroes/: HyoudouKotetsu.cpp  HyoudouKotetsu.h
src/Characters/Monsters/: GobTheGoodGoblin.cpp  GobTheGoodGoblin.h
src/Characters/Murim/: HyukWoonSung.cpp  HyukWoonSung.h  README_HyukWoonSung.md  StanceSystem.cpp  StanceSystem.h  TestHyukWoonSung.cpp  TestSpecialMoves.cpp
src/Characters/System/: CyberNinja.cpp  CyberNinja.h  Yuito.cpp  Yuito.h  YuitoPets.cpp  YuitoPets.h
src/Combat/: CombatEnums.h  CombatSystem.cpp  CombatSystem.h  ComboSystem.cpp  ComboSystem.h  DamageCalculator.cpp  DamageCalculator.h  FrameData.h  HitDetection.cpp  HitDetection.h  SkillSystemGuide.md  SpecialMoveSystem.cpp  SpecialMoveSystem.h
src/Equipment/: EquipmentLoadout.cpp  EquipmentLoadout.h  EquipmentTypes.cpp  EquipmentTypes.h
src/GameModes/: BeastMode.cpp  BeastMode.h  DeathMatchMode.cpp  DeathMatchMode.h  DimensionalRiftMode.cpp  DimensionalRiftMode.h  ForGloryMode.cpp  ForGloryMode.h  GameMode.cpp  GameMode.h  GameModeFactory.h  GameModeManager.cpp  GameModeManager.h  OnlineMode.cpp  OnlineMode.h  SinglePlayerMode.cpp  SinglePlayerMode.h  SurvivalMode.cpp  SurvivalMode.h  TournamentMode.cpp  TournamentMode.h  TrainingMode.cpp  TrainingMode.h  VersusMode.cpp  VersusMode.h
src/Integration/: GameplayManagerAdapter.h
src/Monsters/Rou/: Rou.cpp  Rou.h
src/Monsters/Rou/States/: EvolutionStateMachine.cpp  EvolutionStateMachine.h  FormStates.h
src/Monsters/Rou/Tests/: RouTests.cpp
src/Monsters/Rou/Visuals/: EvolutionVFX.cpp  EvolutionVFX.h
src/Murim/HyukWoonSung/: HyukWoonSung.cpp  HyukWoonSung.h
src/Murim/HyukWoonSung/Stances/: DarkStance.cpp  DarkStance.h  LightStance.cpp  LightStance.h
src/Murim/HyukWoonSung/Tests/: HyukTests.cpp
src/Murim/HyukWoonSung/Visuals/: DragonGauge.cpp  DragonGauge.h  StanceVFX.cpp  StanceVFX.h
src/Network/: InputBuffer.cpp  InputBuffer.h  NetworkManager.cpp  NetworkManager.h  NetworkPacket.cpp  NetworkPacket.h
src/Physics/: Collider.cpp  Collider.h  HitboxManager.cpp  HitboxManager.h  PhysicsConstants.h  PhysicsEngine.cpp  PhysicsEngine.h  SpatialGrid.cpp  SpatialGrid.h
src/Ranking/: RankingSystem.cpp  RankingSystem.h
src/Rendering/: DFRShaders.hlsl  RenderingSystemAdapter.cpp  RenderingSystemAdapter.h
src/Shop/: ItemManager.cpp  ItemManager.h  ShopSystemAdapter.cpp  ShopSystemAdapter.h
src/UI/: CharacterData.cpp  CharacterData.h  CharacterSelectionExtensions.cpp  CharacterSelectionExtensions.h  CharacterSelectionScreen.cpp  CharacterSelectionScreen.h  CharacterSelectionScreenImpl.cpp  CombatHUD.cpp  CombatHUD.h  CombatHUDBuilder.cpp  CombatHUDConfig.h  CombatHUDExample.cpp  CombatHUDHelpers.cpp  CombatHUDImpl.cpp  CombatUI.cpp  CombatUI.h  EquipmentScreen.cpp  EquipmentScreen.h  EquipmentSystem.cpp  EquipmentSystem.h  EquipmentSystemUI.cpp  EquipmentTypes.cpp  EquipmentTypes.h  GameModeUI.cpp  GameModeUI.h  MainMenu.cpp  MainMenu.h  MainMenuScreen.cpp  MainMenuScreen.h  UIButton.cpp  UIButton.h  UIElement.cpp  UIElement.h  UILabel.cpp  UILabel.h  UIPanel.cpp  UIPanel.h  UIProgressBar.cpp  UIProgressBar.h  UIRenderer.cpp  (+5 more)
src/UI/Animations/: UIAnimation.h
src/UI/Components/: ContextMenu.h  GameButton.cpp  GameButton.h  GridLayout.h  Modal.h  Slider.h  TabbedPanel.h  UIElement.h  UIPanel.cpp  UIPanel.h
src/UI/Core/: UIManager.cpp  UIManager.h  UIStyle.h  UITheme.h
src/UI/Effects/: ParticleSystem.h
src/UI/Screens/: CharacterSelectScreen.h  InGameHUD.h  MainMenuScreen.h  UIScreen.h
src/UI/Windows/: CharacterCustomizationPanel.cpp  CharacterUnlockScreen.cpp  CharacterUnlockScreen.h  LobbyWindow.h  QuestWindow.h  SettingsWindow.h  SocialWindow.h
src/VFX/: ParticleSystem.cpp  ParticleSystem.h
(+19 files in other folders)
